--- a/opensea-api/OpenSea API Testing.ipynb
+++ b/opensea-api/OpenSea API Testing.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,16 +158,18 @@
     "    elif 'stats' not in url:\n",
     "        response = requests.request(\"GET\", url)\n",
     "    else:\n",
-    "        response = requests.request(\"GET\", url, headers=headers)\n",
+    "#         response = requests.request(\"GET\", url, headers=headers)\n",
+    "        response = requests.get(url, headers=headers)\n",
     "\n",
     "    # Convert str outcome to dictionary\n",
-    "    response_dict = json.loads(response.text)\n",
-    "    return response_dict"
+    "#     response_dict = json.loads(response.text)\n",
+    "    return url\n",
+    "#     return response_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -184,222 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'assets': [{'id': 42189017,\n",
-       "   'token_id': '1',\n",
-       "   'num_sales': 1,\n",
-       "   'background_color': None,\n",
-       "   'image_url': 'https://lh3.googleusercontent.com/Mww7MGqWNRhhweDW8VxqUzv2N-ZqBFQelNblKQdqO4kp32ShikDi9Fhy0FRPLQkZAK-ruxw_WVFlgYW8l9rRh5atzzCDF_26K62ICQ',\n",
-       "   'image_preview_url': 'https://lh3.googleusercontent.com/Mww7MGqWNRhhweDW8VxqUzv2N-ZqBFQelNblKQdqO4kp32ShikDi9Fhy0FRPLQkZAK-ruxw_WVFlgYW8l9rRh5atzzCDF_26K62ICQ=s250',\n",
-       "   'image_thumbnail_url': 'https://lh3.googleusercontent.com/Mww7MGqWNRhhweDW8VxqUzv2N-ZqBFQelNblKQdqO4kp32ShikDi9Fhy0FRPLQkZAK-ruxw_WVFlgYW8l9rRh5atzzCDF_26K62ICQ=s128',\n",
-       "   'image_original_url': 'https://ipfs.io/ipfs/QmVFPvu8aeJHXyNVxpfftVHaKjRsbtH6dXWscJ2TukM3xi',\n",
-       "   'animation_url': None,\n",
-       "   'animation_original_url': None,\n",
-       "   'name': None,\n",
-       "   'description': None,\n",
-       "   'external_link': None,\n",
-       "   'asset_contract': {'address': '0x60e4d786628fea6478f785a6d7e704777c86a7c6',\n",
-       "    'asset_contract_type': 'non-fungible',\n",
-       "    'created_date': '2021-08-28T23:59:47.536067',\n",
-       "    'name': 'MutantApeYachtClub',\n",
-       "    'nft_version': '3.0',\n",
-       "    'opensea_version': None,\n",
-       "    'owner': 70753020,\n",
-       "    'schema_name': 'ERC721',\n",
-       "    'symbol': 'MAYC',\n",
-       "    'total_supply': '0',\n",
-       "    'description': 'The MUTANT APE YACHT CLUB is a collection of up to 20,000 Mutant Apes that can only be created by exposing an existing Bored Ape to a vial of MUTANT SERUM or by minting a Mutant Ape in the public sale.',\n",
-       "    'external_link': None,\n",
-       "    'image_url': 'https://lh3.googleusercontent.com/lHexKRMpw-aoSyB1WdFBff5yfANLReFxHzt1DOj_sg7mS14yARpuvYcUtsyyx-Nkpk6WTcUPFoG53VnLJezYi8hAs0OxNZwlw6Y-dmI=s120',\n",
-       "    'default_to_fiat': False,\n",
-       "    'dev_buyer_fee_basis_points': 0,\n",
-       "    'dev_seller_fee_basis_points': 250,\n",
-       "    'only_proxied_transfers': False,\n",
-       "    'opensea_buyer_fee_basis_points': 0,\n",
-       "    'opensea_seller_fee_basis_points': 250,\n",
-       "    'buyer_fee_basis_points': 0,\n",
-       "    'seller_fee_basis_points': 500,\n",
-       "    'payout_address': '0xaae7ac476b117bccafe2f05f582906be44bc8ff1'},\n",
-       "   'permalink': 'https://opensea.io/assets/0x60e4d786628fea6478f785a6d7e704777c86a7c6/1',\n",
-       "   'collection': {'banner_image_url': 'https://lh3.googleusercontent.com/5c-HcdLMinTg3LvEwXYZYC-u5nN22Pn5ivTPYA4pVEsWJHU1rCobhUlHSFjZgCHPGSmcGMQGCrDCQU8BfSfygmL7Uol9MRQZt6-gqA=s2500',\n",
-       "    'chat_url': None,\n",
-       "    'created_date': '2021-08-29T00:41:59.548458',\n",
-       "    'default_to_fiat': False,\n",
-       "    'description': 'The MUTANT APE YACHT CLUB is a collection of up to 20,000 Mutant Apes that can only be created by exposing an existing Bored Ape to a vial of MUTANT SERUM or by minting a Mutant Ape in the public sale.',\n",
-       "    'dev_buyer_fee_basis_points': '0',\n",
-       "    'dev_seller_fee_basis_points': '250',\n",
-       "    'discord_url': None,\n",
-       "    'display_data': {'card_display_style': 'contain'},\n",
-       "    'external_url': None,\n",
-       "    'featured': False,\n",
-       "    'featured_image_url': None,\n",
-       "    'hidden': False,\n",
-       "    'safelist_request_status': 'verified',\n",
-       "    'image_url': 'https://lh3.googleusercontent.com/lHexKRMpw-aoSyB1WdFBff5yfANLReFxHzt1DOj_sg7mS14yARpuvYcUtsyyx-Nkpk6WTcUPFoG53VnLJezYi8hAs0OxNZwlw6Y-dmI=s120',\n",
-       "    'is_subject_to_whitelist': False,\n",
-       "    'large_image_url': None,\n",
-       "    'medium_username': None,\n",
-       "    'name': 'Mutant Ape Yacht Club',\n",
-       "    'only_proxied_transfers': False,\n",
-       "    'opensea_buyer_fee_basis_points': '0',\n",
-       "    'opensea_seller_fee_basis_points': '250',\n",
-       "    'payout_address': '0xaae7ac476b117bccafe2f05f582906be44bc8ff1',\n",
-       "    'require_email': False,\n",
-       "    'short_description': None,\n",
-       "    'slug': 'mutant-ape-yacht-club',\n",
-       "    'telegram_url': None,\n",
-       "    'twitter_username': None,\n",
-       "    'instagram_username': None,\n",
-       "    'wiki_url': None},\n",
-       "   'decimals': 0,\n",
-       "   'token_metadata': 'https://boredapeyachtclub.com/api/mutants/1',\n",
-       "   'owner': {'user': None,\n",
-       "    'profile_img_url': 'https://storage.googleapis.com/opensea-static/opensea-profile/2.png',\n",
-       "    'address': '0x465092bbe4ca9675c1cf9c7bf2620b2eefc77e25',\n",
-       "    'config': ''},\n",
-       "   'sell_orders': [{'created_date': '2021-12-27T05:06:32.191494',\n",
-       "     'closing_date': '2022-02-27T05:04:54',\n",
-       "     'closing_extendable': False,\n",
-       "     'expiration_time': 1645938294,\n",
-       "     'listing_time': 1640581421,\n",
-       "     'order_hash': '0x915b0657b48ad80ca5a633433bc8d3e58490cc8fc5adc142a0a25e71968caa83',\n",
-       "     'metadata': {'asset': {'id': '1',\n",
-       "       'address': '0x60e4d786628fea6478f785a6d7e704777c86a7c6'},\n",
-       "      'schema': 'ERC721'},\n",
-       "     'exchange': '0x7be8076f4ea4a4ad08075c2508e481d6c946d12b',\n",
-       "     'maker': {'user': None,\n",
-       "      'profile_img_url': 'https://storage.googleapis.com/opensea-static/opensea-profile/2.png',\n",
-       "      'address': '0x465092bbe4ca9675c1cf9c7bf2620b2eefc77e25',\n",
-       "      'config': ''},\n",
-       "     'taker': {'user': 1766,\n",
-       "      'profile_img_url': 'https://storage.googleapis.com/opensea-static/opensea-profile/1.png',\n",
-       "      'address': '0x0000000000000000000000000000000000000000',\n",
-       "      'config': ''},\n",
-       "     'current_price': '420000000000000000000.0000000',\n",
-       "     'current_bounty': '4200000000000000000',\n",
-       "     'bounty_multiple': '0.01',\n",
-       "     'maker_relayer_fee': '500',\n",
-       "     'taker_relayer_fee': '0',\n",
-       "     'maker_protocol_fee': '0',\n",
-       "     'taker_protocol_fee': '0',\n",
-       "     'maker_referrer_fee': '0',\n",
-       "     'fee_recipient': {'user': 3585,\n",
-       "      'profile_img_url': 'https://storage.googleapis.com/opensea-static/opensea-profile/28.png',\n",
-       "      'address': '0x5b3256965e7c3cf26e11fcaf296dfc8807c01073',\n",
-       "      'config': 'verified'},\n",
-       "     'fee_method': 1,\n",
-       "     'side': 1,\n",
-       "     'sale_kind': 0,\n",
-       "     'target': '0x60e4d786628fea6478f785a6d7e704777c86a7c6',\n",
-       "     'how_to_call': 0,\n",
-       "     'calldata': '0x23b872dd000000000000000000000000465092bbe4ca9675c1cf9c7bf2620b2eefc77e2500000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001',\n",
-       "     'replacement_pattern': '0x000000000000000000000000000000000000000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff0000000000000000000000000000000000000000000000000000000000000000',\n",
-       "     'static_target': '0x0000000000000000000000000000000000000000',\n",
-       "     'static_extradata': '0x',\n",
-       "     'payment_token': '0x0000000000000000000000000000000000000000',\n",
-       "     'payment_token_contract': {'id': 1,\n",
-       "      'symbol': 'ETH',\n",
-       "      'address': '0x0000000000000000000000000000000000000000',\n",
-       "      'image_url': 'https://storage.opensea.io/files/6f8e2979d428180222796ff4a33ab929.svg',\n",
-       "      'name': 'Ether',\n",
-       "      'decimals': 18,\n",
-       "      'eth_price': '1.000000000000000',\n",
-       "      'usd_price': '3429.599999999999909000'},\n",
-       "     'base_price': '420000000000000000000',\n",
-       "     'extra': '0',\n",
-       "     'quantity': '1',\n",
-       "     'salt': '46896297592260620453622279340607854657766447361273753078010985870758283723895',\n",
-       "     'v': 28,\n",
-       "     'r': '0x076e5cf5e1282522b57376a40538c7bff24cfddaba5071b1865c21b9d6aa9b5d',\n",
-       "     's': '0x362de0d59c2e00b9a5c77a0fd44f03efc2a42343289b740c19b5be2d6d58c7e7',\n",
-       "     'approved_on_chain': False,\n",
-       "     'cancelled': False,\n",
-       "     'finalized': False,\n",
-       "     'marked_invalid': False,\n",
-       "     'prefixed_hash': '0x8008ad656dd1a12f2a2b5912d73041bf00b8f2dd2db53b57220a2246c429e05a'}],\n",
-       "   'creator': {'user': {'username': 'MutantApeYachtClub'},\n",
-       "    'profile_img_url': 'https://storage.googleapis.com/opensea-static/opensea-profile/22.png',\n",
-       "    'address': '0x9056d15c49b19df52ffad1e6c11627f035c0c960',\n",
-       "    'config': 'verified'},\n",
-       "   'traits': [{'trait_type': 'Mouth',\n",
-       "     'value': 'M1 Dumbfounded',\n",
-       "     'display_type': None,\n",
-       "     'max_value': None,\n",
-       "     'trait_count': 707,\n",
-       "     'order': None},\n",
-       "    {'trait_type': 'Background',\n",
-       "     'value': 'M1 Gray',\n",
-       "     'display_type': None,\n",
-       "     'max_value': None,\n",
-       "     'trait_count': 1607,\n",
-       "     'order': None},\n",
-       "    {'trait_type': 'Fur',\n",
-       "     'value': 'M1 Cream',\n",
-       "     'display_type': None,\n",
-       "     'max_value': None,\n",
-       "     'trait_count': 852,\n",
-       "     'order': None},\n",
-       "    {'trait_type': 'Hat',\n",
-       "     'value': \"M1 Baby's Bonnet\",\n",
-       "     'display_type': None,\n",
-       "     'max_value': None,\n",
-       "     'trait_count': 223,\n",
-       "     'order': None},\n",
-       "    {'trait_type': 'Eyes',\n",
-       "     'value': 'M1 Eyepatch',\n",
-       "     'display_type': None,\n",
-       "     'max_value': None,\n",
-       "     'trait_count': 451,\n",
-       "     'order': None},\n",
-       "    {'trait_type': 'Clothes',\n",
-       "     'value': 'M1 Prison Jumpsuit',\n",
-       "     'display_type': None,\n",
-       "     'max_value': None,\n",
-       "     'trait_count': 316,\n",
-       "     'order': None}],\n",
-       "   'last_sale': {'asset': {'token_id': '1', 'decimals': 0},\n",
-       "    'asset_bundle': None,\n",
-       "    'event_type': 'successful',\n",
-       "    'event_timestamp': '2021-09-03T02:03:48',\n",
-       "    'auction_type': None,\n",
-       "    'total_price': '7000000000000000000',\n",
-       "    'payment_token': {'id': 1,\n",
-       "     'symbol': 'ETH',\n",
-       "     'address': '0x0000000000000000000000000000000000000000',\n",
-       "     'image_url': 'https://storage.opensea.io/files/6f8e2979d428180222796ff4a33ab929.svg',\n",
-       "     'name': 'Ether',\n",
-       "     'decimals': 18,\n",
-       "     'eth_price': '1.000000000000000',\n",
-       "     'usd_price': '3429.599999999999909000'},\n",
-       "    'transaction': {'block_hash': '0xa10a4e3807093bba399af72879fe4b62aebfdde4494d50c3af8de9e50e7b8d8a',\n",
-       "     'block_number': '13149960',\n",
-       "     'from_account': {'user': {'username': 'AZG'},\n",
-       "      'profile_img_url': 'https://storage.googleapis.com/opensea-static/opensea-profile/17.png',\n",
-       "      'address': '0x194cc2541ea8696957acdcf1dc3dd5a687bb5ca5',\n",
-       "      'config': ''},\n",
-       "     'id': 157933431,\n",
-       "     'timestamp': '2021-09-03T02:03:48',\n",
-       "     'to_account': {'user': {'username': 'OpenSea-Orders'},\n",
-       "      'profile_img_url': 'https://storage.googleapis.com/opensea-static/opensea-profile/22.png',\n",
-       "      'address': '0x7be8076f4ea4a4ad08075c2508e481d6c946d12b',\n",
-       "      'config': 'verified'},\n",
-       "     'transaction_hash': '0x46250b9b4c55d88ba057f26262c206ebb3f21feb17f2811a15d16bfd9017cfd7',\n",
-       "     'transaction_index': '231'},\n",
-       "    'created_date': '2021-09-03T02:04:24.003562',\n",
-       "    'quantity': '1'},\n",
-       "   'top_bid': None,\n",
-       "   'listing_date': None,\n",
-       "   'is_presale': False,\n",
-       "   'transfer_fee_payment_token': None,\n",
-       "   'transfer_fee': None}]}"
+       "'https://api.opensea.io/api/v1/assets?token_ids=1&collection=mutant-ape-yacht-club'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,10 +206,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [403]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# url = \"https://api.opensea.io/api/v1/assets?order_direction=desc&limit=20&include_orders=false\"\n",
+    "\n",
+    "headers = {\"Accept\": \"application/json\"}\n",
+    "\n",
+    "response2 = requests.get(response, headers=headers)\n",
+    "\n",
+    "print(response2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -432,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
